--- a/_posts/2018-01-02-cine-por-mujeres.html
+++ b/_posts/2018-01-02-cine-por-mujeres.html
@@ -10,7 +10,7 @@ footer: '<p><strong>Cine por mujeres</strong><br />  <strong>Limbo producciones<
 <img class="fix535 espacio30" src="{% include image_path.html %}/CartelCPM.png">
 <img class="fix535 espacio30" src="{% include image_path.html %}/CartelCPM2.png">
 <img class="fix535 espacio30" src="{% include image_path.html %}/Cartelmupi.png">
-<img class="fix535 espacio30" src="{% include image_path.html %}/Brochures.png" class="fix535">
+<img class="fix535 espacio30" src="{% include image_path.html %}/Brochures.png" class="fix535 espacio30">  
 
 <iframe src="https://player.vimeo.com/video/331580546?autoplay=1&loop=1" width="420" height="535" frameborder="0" allow="autoplay; fullscreen" allowfullscreen class="espacio30"></iframe>
 
