--- a/_posts/2019-01-02-el-poder-del-arte.html
+++ b/_posts/2019-01-02-el-poder-del-arte.html
@@ -18,3 +18,5 @@ footer: '<p><strong>El poder del arte</strong><br />  <strong>Instituto Cervante
 
 
 <img class="fix535 espacio25" src="{% include image_path.html %}/Publicacion-el-poder-del-arte.gif">
+
+<img class="fix535 espacio25" src="{% include image_path.html %}/pda.gif">
