--- a/_posts/2018-01-02-cine-por-mujeres.html
+++ b/_posts/2018-01-02-cine-por-mujeres.html
@@ -11,7 +11,7 @@ footer: '<p><strong>Cine por mujeres</strong><br />  <strong>Limbo producciones<
 <img class="fix535 espacio30" src="{% include image_path.html %}/CartelCPM2.png">
 <img class="fix535 espacio30" src="{% include image_path.html %}/Cartelmupi.png">
 
-<img class="fix535 espacio30" src="{% include image_path.html %}/Cartelmupi.png">
+<img class="fix535 espacio30" src="{% include image_path.html %}/LonaCBB.jpg">
 
 <img class="fix535 espacio30" src="{% include image_path.html %}/Brochures.png" class="fix535 espacio30">
 
