--- a/_posts/2019-05-09-lee-lozano.html
+++ b/_posts/2019-05-09-lee-lozano.html
@@ -7,3 +7,19 @@ footer: '<p><strong>Lee Lozano</strong><br />  <strong>Instituto Cervantes / Goe
 <img class="fix535 espacio25" src="{% include image_path.html %}/LeeLozano.jpg">
 <img class="fix535 espacio25" src="{% include image_path.html %}/LeeLozano2.jpg">
 <img class="fix535 espacio25" src="{% include image_path.html %}/LeeLozano3.jpg">
+<img class="fix535 espacio25" src="{% include image_path.html %}/LeeLozano4.jpg">
+<img class="fix535 espacio25" src="{% include image_path.html %}/LeeLozano5.jpg">
+<img class="fix535 espacio25" src="{% include image_path.html %}/LeeLozano6.jpg">
+<img class="fix535 espacio25" src="{% include image_path.html %}/LeeLozano7.jpg">
+<img class="fix535 espacio25" src="{% include image_path.html %}/LeeLozano8.jpg">
+<img class="fix535 espacio25" src="{% include image_path.html %}/LeeLozano9.jpg">
+<img class="fix535 espacio25" src="{% include image_path.html %}/LeeLozano10.jpg">
+<img class="fix535 espacio25" src="{% include image_path.html %}/LeeLozano11.jpg">
+<img class="fix535 espacio25" src="{% include image_path.html %}/LeeLozano12.jpg">
+<img class="fix535 espacio25" src="{% include image_path.html %}/LeeLozano13.jpg">
+<img class="fix535 espacio25" src="{% include image_path.html %}/LeeLozano14.jpg">
+<img class="fix535 espacio25" src="{% include image_path.html %}/LeeLozano15.jpg">
+<img class="fix535 espacio25" src="{% include image_path.html %}/LeeLozano16.jpg">
+<img class="fix535 espacio25" src="{% include image_path.html %}/LeeLozano17.jpg">
+<img class="fix535 espacio25" src="{% include image_path.html %}/LeeLozano18.jpg">
+<img class="fix535 espacio25" src="{% include image_path.html %}/LeeLozano19.jpg">
