--- a/_posts/2019-05-09-pilar-albarracin.html
+++ b/_posts/2019-05-09-pilar-albarracin.html
@@ -4,22 +4,22 @@ title: Cine por mujeres
 image_path: /projects/lee-lozano
 footer: '<p><strong>Lee Lozano</strong><br />  <strong>Instituto Cervantes / Goethe Institut </strong> 2014-2015<br />VI Spanish-German Culture Meeting. Berlín amp; Madrid <br />Visual identity, web, exhibition graphics, catalog, postcard and brochure design. <a href="http://architectusomnibus.org/" target="new">www.architectusomnibus.org</a>'
 ---
-<img class="fix535" src="{% include image_path.html %}/pilar-albarracin.jpg">
-<img class="fix535" src="{% include image_path.html %}/pilar-albarracin2.jpg">
-<img class="fix535" src="{% include image_path.html %}/pilar-albarracin3.jpg">
-<img class="fix535" src="{% include image_path.html %}/pilar-albarracin4.jpg">
-<img class="fix535" src="{% include image_path.html %}/pilar-albarracin5.jpg">
-<img class="fix535" src="{% include image_path.html %}/pilar-albarracin6.jpg">
-<img class="fix535" src="{% include image_path.html %}/pilar-albarracin7.jpg">
-<img class="fix535" src="{% include image_path.html %}/pilar-albarracin8.jpg">
-<img class="fix535" src="{% include image_path.html %}/pilar-albarracin9.jpg">
-<img class="fix535" src="{% include image_path.html %}/pilar-albarracin10.jpg">
-<img class="fix535" src="{% include image_path.html %}/pilar-albarracin11.jpg">
-<img class="fix535" src="{% include image_path.html %}/pilar-albarracin12.jpg">
-<img class="fix535" src="{% include image_path.html %}/pilar-albarracin13.jpg">
-<img class="fix535" src="{% include image_path.html %}/pilar-albarracin14.jpg">
-<img class="fix535" src="{% include image_path.html %}/pilar-albarracin15.jpg">
-<img class="fix535" src="{% include image_path.html %}/pilar-albarracin16.jpg">
-<img class="fix535" src="{% include image_path.html %}/pilar-albarracin17.jpg">
-<img class="fix535" src="{% include image_path.html %}/pilar-albarracin18.jpg">
-<img class="fix535" src="{% include image_path.html %}/pilar-albarracin19.jpg">
+<img class="fix535" src="{% include image_path.html %}/pilaralbarracin.jpg">
+<img class="fix535" src="{% include image_path.html %}/pilaralbarracin2.jpg">
+<img class="fix535" src="{% include image_path.html %}/pilaralbarracin3.jpg">
+<img class="fix535" src="{% include image_path.html %}/pilaralbarracin4.jpg">
+<img class="fix535" src="{% include image_path.html %}/pilaralbarracin5.jpg">
+<img class="fix535" src="{% include image_path.html %}/pilaralbarracin6.jpg">
+<img class="fix535" src="{% include image_path.html %}/pilaralbarracin7.jpg">
+<img class="fix535" src="{% include image_path.html %}/pilaralbarracin8.jpg">
+<img class="fix535" src="{% include image_path.html %}/pilaralbarracin9.jpg">
+<img class="fix535" src="{% include image_path.html %}/pilaralbarracin10.jpg">
+<img class="fix535" src="{% include image_path.html %}/pilaralbarracin11.jpg">
+<img class="fix535" src="{% include image_path.html %}/pilaralbarracin12.jpg">
+<img class="fix535" src="{% include image_path.html %}/pilaralbarracin13.jpg">
+<img class="fix535" src="{% include image_path.html %}/pilaralbarracin14.jpg">
+<img class="fix535" src="{% include image_path.html %}/pilaralbarracin15.jpg">
+<img class="fix535" src="{% include image_path.html %}/pilaralbarracin16.jpg">
+<img class="fix535" src="{% include image_path.html %}/pilaralbarracin17.jpg">
+<img class="fix535" src="{% include image_path.html %}/pilaralbarracin18.jpg">
+<img class="fix535" src="{% include image_path.html %}/pilaralbarracin19.jpg">
