--- a/_posts/2019-05-09-pilar-albarracin.html
+++ b/_posts/2019-05-09-pilar-albarracin.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Cine por mujeres
-image_path: /projects/lee-lozano
+image_path: /projects/pilar-albarracin
 footer: '<p><strong>Lee Lozano</strong><br />  <strong>Instituto Cervantes / Goethe Institut </strong> 2014-2015<br />VI Spanish-German Culture Meeting. Berlín amp; Madrid <br />Visual identity, web, exhibition graphics, catalog, postcard and brochure design. <a href="http://architectusomnibus.org/" target="new">www.architectusomnibus.org</a>'
 ---
 <img class="fix535" src="{% include image_path.html %}/pilaralbarracin.jpg">
