--- a/_posts/2019-05-09-pilar-albarracin.html
+++ b/_posts/2019-05-09-pilar-albarracin.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Cine por mujeres
+title: Pilar Albarracin 2018
 image_path: /projects/pilar-albarracin-2018
 footer: '<p><strong>Pilar Albarracín</strong><br />  <strong>Instituto Cervantes / Goethe Institut </strong> 2014-2015<br />VI Spanish-German Culture Meeting. Berlín amp; Madrid <br />Visual identity, web, exhibition graphics, catalog, postcard and brochure design. <a href="http://architectusomnibus.org/" target="new">www.architectusomnibus.org</a>'
 ---
