--- a/_posts/2019-05-09-lee-lozano.html
+++ b/_posts/2019-05-09-lee-lozano.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Cine por mujeres
+title: Lee Lozano
 image_path: /projects/lee-lozano
 footer: '<p><strong>Lee Lozano</strong><br />  <strong>Instituto Cervantes / Goethe Institut </strong> 2014-2015<br />VI Spanish-German Culture Meeting. Berlín amp; Madrid <br />Visual identity, web, exhibition graphics, catalog, postcard and brochure design. <a href="http://architectusomnibus.org/" target="new">www.architectusomnibus.org</a>'
 ---
