--- a/list.html
+++ b/list.html
@@ -12,4 +12,10 @@ flex-wrap: wrap;
 }"
 ---
 <h1>Project list</h1>
-<ul>{% for post in site.posts %}<li><a href="{{ post.url | relative_url}}" class="current" >{{ post.title }} - {{ post.url }}</a></li>{% endfor %}</ul>
+<ul>
+  {% for post in site.posts %}
+  <li>
+    <a href="{{ post.url | relative_url}}" class="current" >{{ post.title }} - {{ post.url }}</a>
+  </li>
+  {% endfor %}
+</ul>
