--- a/_posts/2018-01-02-cine-por-mujeres.html
+++ b/_posts/2018-01-02-cine-por-mujeres.html
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: Cine por mujeres
-image_path: /projects/cine-por-mujeres
-footer: '<p><strong>Cine por mujeres</strong><br />  <strong>Limbo producciones</strong> 2018-2019<br />International film festival made by women, Madrid <br />Visual identity, poster design, web design, brochure, festival teaser video and social media animations. <a href="http://architectusomnibus.org/" target="new">www.architectusomnibus.org</a>
-  
+title: Dorothea Tanning
+image_path: /projects/dorothea-tanning
+footer: '<p><strong>Dorothea Tanning</strong><br />  <strong>Instituto Cervantes / Goethe Institut </strong> 2014-2015<br />VI Spanish-German Culture Meeting. Berlín amp; Madrid <br />Visual identity, web, exhibition graphics, catalog, postcard and brochure design. <a href="http://architectusomnibus.org/" target="new">www.architectusomnibus.org</a>'
+
 ---
 <img class="fix535" src="{% include image_path.html %}/Brandonclip.gif">
 <img class="fix535 espacio30" src="{% include image_path.html %}/Logoanimation.gif">
