--- a/_posts/2018-01-02-cine-por-mujeres.html
+++ b/_posts/2018-01-02-cine-por-mujeres.html
@@ -2,7 +2,7 @@
 layout: post
 title: Dorothea Tanning
 image_path: /projects/dorothea-tanning
-footer: '<p><strong>Dorothea Tanning</strong><br />  <strong>Instituto Cervantes / Goethe Institut </strong> 2014-2015<br />VI Spanish-German Culture Meeting. Berlín amp; Madrid <br />Visual identity, web, exhibition graphics, catalog, postcard and brochure design. <a href="http://architectusomnibus.org/" target="new">www.architectusomnibus.org</a>'
+footer: ''
 
 ---
 <img class="fix535" src="{% include image_path.html %}/Brandonclip.gif">
