--- a/_posts/2019-01-02-el-poder-del-arte.html
+++ b/_posts/2019-01-02-el-poder-del-arte.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Cine por mujeres
+title: El poder del arte
 image_path: /projects/el-poder-del-arte
 footer: '<p><strong>El poder del arte</strong><br />  <strong>Instituto Cervantes / Goethe Institut </strong> 2014-2015<br />VI Spanish-German Culture Meeting. Berlín amp; Madrid <br />Visual identity, web, exhibition graphics, catalog, postcard and brochure design. <a href="http://architectusomnibus.org/" target="new">www.architectusomnibus.org</a>'
 ---
