--- a/_posts/2018-01-02-cine-por-mujeres.html
+++ b/_posts/2018-01-02-cine-por-mujeres.html
@@ -2,7 +2,7 @@
 layout: post
 title: Cine por mujeres
 image_path: /projects/cine-por-mujeres
-footer: '<p><strong>Limbo Producciones </strong>2018-2019<br />  <strong><em>Cine por mujeres.</em></strong> Films made by women. International Film Festival <br />Visual identity, poster, web, brochure, festival video teaser and social media animations.'
+footer: '<p><strong>Limbo Producciones </strong>2018-2019<br />  <strong><em>Cine por mujeres.</em></strong> Films made by women. International Film Festival <br />Visual identity, poster, web, brochure, festival video teaser and social media animations'
 
 ---
 <img class="fix535" src="{% include image_path.html %}/Brandonclip.gif">
