--- a/_posts/2019-05-09-pilar-albarracin-18.html
+++ b/_posts/2019-05-09-pilar-albarracin-18.html
@@ -2,7 +2,8 @@
 layout: post
 title: Pilar Albarracín 2018
 image_path: /projects/pilar-albarracin-2018
-footer: '<p><strong>Pilar Albarracín</strong><br />  <strong>Instituto Cervantes / Goethe Institut </strong> 2014-2015<br />VI Spanish-German Culture Meeting. Berlín amp; Madrid <br />Visual identity, web, exhibition graphics, catalog, postcard and brochure design. <a href="http://architectusomnibus.org/" target="new">www.architectusomnibus.org</a>'
+footer: '<p><strong>Tabacalera Promoción del Arte, Spanish Ministry of Culture and Sports</strong><br />  <strong><em>Pilar Albarracín. Que me quiten lo bailado.</em></strong>2018<br />Catalogue, 136 pages 17 x 24 cm, and exhibition graphics
+'
 ---
 <img class="fix535" src="{% include image_path.html %}/pilaralbarracin.jpg">
 <img class="fix535" src="{% include image_path.html %}/pilaralbarracin2.jpg">
