--- a/_posts/2019-05-09-lee-lozano.html
+++ b/_posts/2019-05-09-lee-lozano.html
@@ -2,7 +2,7 @@
 layout: post
 title: Lee Lozano
 image_path: /projects/lee-lozano
-footer: '<p><strong>Lee Lozano</strong><br />  <strong>Instituto Cervantes / Goethe Institut </strong> 2014-2015<br />VI Spanish-German Culture Meeting. Berlín amp; Madrid <br />Visual identity, web, exhibition graphics, catalog, postcard and brochure design. <a href="http://architectusomnibus.org/" target="new">www.architectusomnibus.org</a>'
+footer: '<p><strong>Museo Reina Sofía  </strong>2017<br />  <strong><em>Dorothea Tanning.</em></strong><br />Catalogue, 208 pages, 20,5 x 26 cm.'
 ---
 <img class="fix535" src="{% include image_path.html %}/LeeLozano.jpg">
 <img class="fix535" src="{% include image_path.html %}/LeeLozano2.jpg">
