--- a/_posts/2019-01-02-el-poder-del-arte.html
+++ b/_posts/2019-01-02-el-poder-del-arte.html
@@ -2,7 +2,7 @@
 layout: post
 title: El poder del arte
 image_path: /projects/el-poder-del-arte
-footer: '<p><strong>Spanish Parliament, AC/E Spanish Cultural Agency, Museo Reina Sofía,  </strong>2018<br /><strong><em>El poder del arte. </em></strong>Catalogue, 80 pages 14,5 x 23 cm, and exhibition graphics at Spanish Congress and Senate.'
+footer: '<p><strong>Spanish Parliament, AC/E Spanish Cultural Agency, Museo Reina Sofía,  </strong>2018<br /><strong><em>El poder del arte. </em></strong>Visual identity, catalogue and exhibition graphics at Spanish Congress and Senate'
 ---
 <img class="fix535 espacio25" src="{% include image_path.html %}/congreso.jpg">
 <img class="fix535 espacio15" src="{% include image_path.html %}/pda3.jpg">
