--- a/_posts/2019-05-09-lee-lozano.html
+++ b/_posts/2019-05-09-lee-lozano.html
@@ -2,7 +2,7 @@
 layout: post
 title: Lee Lozano
 image_path: /projects/lee-lozano
-footer: '<p><strong>Museo Reina Sofía  </strong>2017<br />  <strong><em>Lee Lozano. Forzar la máquina. </em></strong>Catalogue, 208 pages, 20,5 x 26 cm.'
+footer: '<p><strong>Museo Reina Sofía  </strong>2017<br />  <strong><em>Lee Lozano. Forzar la máquina. </em></strong>Catalogue, 208 pages, 20,5 x 26 cm'
 ---
 <img class="fix535" src="{% include image_path.html %}/LeeLozano.jpg">
 <img class="fix535" src="{% include image_path.html %}/LeeLozano2.jpg">
