--- a/_posts/2019-05-09-dorothea-tanning.html
+++ b/_posts/2019-05-09-dorothea-tanning.html
@@ -2,7 +2,7 @@
 layout: post
 title: Dorothea Tanning
 image_path: /projects/dorothea-tanning
-footer: '<p><strong>Dorothea Tanning</strong><br />  <strong>Instituto Cervantes / Goethe Institut </strong> 2014-2015<br />VI Spanish-German Culture Meeting. Berlín amp; Madrid <br />Visual identity, web, exhibition graphics, catalog, postcard and brochure design. <a href="http://architectusomnibus.org/" target="new">www.architectusomnibus.org</a>'
+footer: '<p><strong>Museo Reina Sofía  </strong>2018<br />  <strong><em>Dorothea Tanning.</em></strong>Catalogue, 208 pages, 20,5 x 26 cm'
 ---
 <img class="fix535" src="{% include image_path.html %}/dorotheatanning.jpg">
 <img class="fix535" src="{% include image_path.html %}/dorotheatanning2.jpg">
