--- a/_posts/2018-01-02-cine-por-mujeres.html
+++ b/_posts/2018-01-02-cine-por-mujeres.html
@@ -6,27 +6,30 @@ footer: '<p><strong>Limbo Producciones </strong>2018-2019<br />  <strong><em>Cin
 
 ---
 <img class="fix535" src="{% include image_path.html %}/Brandonclip.gif">
+
 <img class="fix535 espacio30" src="{% include image_path.html %}/Logoanimation.gif">
 
 <img class="fix535 espacio30" src="{% include image_path.html %}/CartelCPM.png">
-<img class="fix535 espacio30" src="{% include image_path.html %}/CartelCPM2.png">
 
+<img class="fix535 espacio30" src="{% include image_path.html %}/folleto-cinepormujeres.jpg" class="fix535 espacio30">
 
 <img class="fix535 espacio30" src="{% include image_path.html %}/LonaCBB.jpg">
 
 
-
-<img class="fix535 espacio30" src="{% include image_path.html %}/Brochures.png" class="fix535 espacio30">
+<iframe src="https://player.vimeo.com/video/310297437?title=0&byline=0&portrait=0" width="952" height="535" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="espacio30"></iframe>
 
 <iframe src="https://player.vimeo.com/video/331772582?autoplay=1&loop=1&title=0&byline=0&portrait=0" width="420" height="535" frameborder="0" allow="autoplay; fullscreen" allowfullscreen class="espacio30"></iframe>
 
 <iframe src="https://player.vimeo.com/video/331580546?autoplay=1&loop=1" width="420" height="535" frameborder="0" allow="autoplay; fullscreen" allowfullscreen class="espacio30"></iframe>
 
-<iframe src="https://player.vimeo.com/video/331540989?autoplay=1&loop=1&title=0&byline=0&portrait=0" width="472" height="535" frameborder="0" allow="autoplay; fullscreen" allowfullscreen class="espacio30"></iframe>
 
 <iframe src="https://player.vimeo.com/video/331548722?autoplay=1&loop=1&title=0&byline=0&portrait=0" width="951" height="535" frameborder="0" allow="autoplay; fullscreen" allowfullscreen class="espacio30"></iframe>
 
-<iframe src="https://player.vimeo.com/video/310297437?title=0&byline=0&portrait=0" width="952" height="535" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="espacio30"></iframe>
 
+
+
+
+
+<iframe src="https://player.vimeo.com/video/331540989?autoplay=1&loop=1&title=0&byline=0&portrait=0" width="472" height="535" frameborder="0" allow="autoplay; fullscreen" allowfullscreen class="espacio30"></iframe>
 
 <img class="fix535 espacio30" src="{% include image_path.html %}/CPMtotebag.png">
