--- a/_posts/2019-05-09-lee-lozano.html
+++ b/_posts/2019-05-09-lee-lozano.html
@@ -4,22 +4,24 @@ title: Lee Lozano
 image_path: /projects/lee-lozano
 footer: '<p><strong>Museo Reina Sofía  </strong>2017<br />  <strong><em>Lee Lozano. Forzar la máquina. </em></strong>Catalogue, 208 pages, 20,5 x 26 cm'
 ---
-<img class="fix535" src="{% include image_path.html %}/LeeLozano.jpg">
-<img class="fix535" src="{% include image_path.html %}/LeeLozano2.jpg">
-<img class="fix535" src="{% include image_path.html %}/LeeLozano3.jpg">
-<img class="fix535" src="{% include image_path.html %}/LeeLozano4.jpg">
-<img class="fix535" src="{% include image_path.html %}/LeeLozano5.jpg">
-<img class="fix535" src="{% include image_path.html %}/LeeLozano6.jpg">
-<img class="fix535" src="{% include image_path.html %}/LeeLozano7.jpg">
-<img class="fix535" src="{% include image_path.html %}/LeeLozano8.jpg">
-<img class="fix535" src="{% include image_path.html %}/LeeLozano9.jpg">
-<img class="fix535" src="{% include image_path.html %}/LeeLozano10.jpg">
-<img class="fix535" src="{% include image_path.html %}/LeeLozano11.jpg">
-<img class="fix535" src="{% include image_path.html %}/LeeLozano12.jpg">
-<img class="fix535" src="{% include image_path.html %}/LeeLozano13.jpg">
-<img class="fix535" src="{% include image_path.html %}/LeeLozano14.jpg">
-<img class="fix535" src="{% include image_path.html %}/LeeLozano15.jpg">
-<img class="fix535" src="{% include image_path.html %}/LeeLozano16.jpg">
-<img class="fix535" src="{% include image_path.html %}/LeeLozano17.jpg">
-<img class="fix535" src="{% include image_path.html %}/LeeLozano18.jpg">
-<img class="fix535" src="{% include image_path.html %}/LeeLozano19.jpg">
+<img class="fix535" src="{% include image_path.html %}/leelozano-1.jpg">
+<img class="fix535" src="{% include image_path.html %}/leelozano-2.jpg">
+<img class="fix535" src="{% include image_path.html %}/leelozano-3.jpg">
+<img class="fix535" src="{% include image_path.html %}/leelozano-4.jpg">
+<img class="fix535" src="{% include image_path.html %}/leelozano-5.jpg">
+<img class="fix535" src="{% include image_path.html %}/leelozano-6.jpg">
+<img class="fix535" src="{% include image_path.html %}/leelozano-7.jpg">
+<img class="fix535" src="{% include image_path.html %}/leelozano-8.jpg">
+<img class="fix535" src="{% include image_path.html %}/leelozano-9.jpg">
+<img class="fix535" src="{% include image_path.html %}/leelozano-10.jpg">
+<img class="fix535" src="{% include image_path.html %}/leelozano-11.jpg">
+<img class="fix535" src="{% include image_path.html %}/leelozano-12.jpg">
+<img class="fix535" src="{% include image_path.html %}/leelozano-13.jpg">
+<img class="fix535" src="{% include image_path.html %}/leelozano-14.jpg">
+<img class="fix535" src="{% include image_path.html %}/leelozano-15.jpg">
+<img class="fix535" src="{% include image_path.html %}/leelozano-16.jpg">
+<img class="fix535" src="{% include image_path.html %}/leelozano-17.jpg">
+<img class="fix535" src="{% include image_path.html %}/leelozano-18.jpg">
+<img class="fix535" src="{% include image_path.html %}/leelozano-19.jpg">
+<img class="fix535" src="{% include image_path.html %}/leelozano-20.jpg">
+<img class="fix535" src="{% include image_path.html %}/leelozano-21.jpg">
