--- a/_posts/2019-05-09-dorothea-tanning.html
+++ b/_posts/2019-05-09-dorothea-tanning.html
@@ -4,27 +4,27 @@ title: Dorothea Tanning
 image_path: /projects/dorothea-tanning
 footer: '<p><strong>Museo Reina Sofía  </strong>2018<br />  <strong><em>Dorothea Tanning. </em></strong>Catalogue, 208 pages, 20,5 x 26 cm'
 ---
-<img class="fix535" src="{% include image_path.html %}/dorotheatanning.jpg">
-<img class="fix535" src="{% include image_path.html %}/dorotheatanning2.jpg">
-<img class="fix535" src="{% include image_path.html %}/dorotheatanning3.jpg">
-<img class="fix535" src="{% include image_path.html %}/dorotheatanning4.jpg">
-<img class="fix535" src="{% include image_path.html %}/dorotheatanning5.jpg">
-<img class="fix535" src="{% include image_path.html %}/pdorotheatanning6.jpg">
-<img class="fix535" src="{% include image_path.html %}/dorotheatanning7.jpg">
-<img class="fix535" src="{% include image_path.html %}/dorotheatanning8.jpg">
-<img class="fix535" src="{% include image_path.html %}/dorotheatanning9.jpg">
-<img class="fix535" src="{% include image_path.html %}/dorotheatanning10.jpg">
-<img class="fix535" src="{% include image_path.html %}/pdorotheatanning11.jpg">
-<img class="fix535" src="{% include image_path.html %}/dorotheatanning12.jpg">
-<img class="fix535" src="{% include image_path.html %}/dorotheatanning13.jpg">
-<img class="fix535" src="{% include image_path.html %}/pdorotheatanning14.jpg">
-<img class="fix535" src="{% include image_path.html %}/dorotheatanning15.jpg">
-<img class="fix535" src="{% include image_path.html %}/dorotheatanning16.jpg">
-<img class="fix535" src="{% include image_path.html %}/dorotheatanning17.jpg">
-<img class="fix535" src="{% include image_path.html %}/dorotheatanning18.jpg">
-<img class="fix535" src="{% include image_path.html %}/pdorotheatanning19.jpg">
-<img class="fix535" src="{% include image_path.html %}/pdorotheatanning20.jpg">
-<img class="fix535" src="{% include image_path.html %}/pdorotheatanning21.jpg">
-<img class="fix535" src="{% include image_path.html %}/pdorotheatanning22.jpg">
-<img class="fix535" src="{% include image_path.html %}/pdorotheatanning23.jpg">
-<img class="fix535" src="{% include image_path.html %}/pdorotheatanning24.jpg">
+<img class="fix535" src="{% include image_path.html %}/dd-tanning-1.jpg">
+<img class="fix535" src="{% include image_path.html %}/dd-tanning-2.jpg">
+<img class="fix535" src="{% include image_path.html %}/dd-tanning-3.jpg">
+<img class="fix535" src="{% include image_path.html %}/dd-tanning-4.jpg">
+<img class="fix535" src="{% include image_path.html %}/dd-tanning-5.jpg">
+<img class="fix535" src="{% include image_path.html %}/dd-tanning-6.jpg">
+<img class="fix535" src="{% include image_path.html %}/dd-tanning-7.jpg">
+<img class="fix535" src="{% include image_path.html %}/dd-tanning-8.jpg">
+<img class="fix535" src="{% include image_path.html %}/dd-tanning-9.jpg">
+<img class="fix535" src="{% include image_path.html %}/dd-tanning-10.jpg">
+<img class="fix535" src="{% include image_path.html %}/dd-tanning-11.jpg">
+<img class="fix535" src="{% include image_path.html %}/dd-tanning-12.jpg">
+<img class="fix535" src="{% include image_path.html %}/dd-tanning-13.jpg">
+<img class="fix535" src="{% include image_path.html %}/dd-tanning-14.jpg">
+<img class="fix535" src="{% include image_path.html %}/dd-tanning-15.jpg">
+<img class="fix535" src="{% include image_path.html %}/dd-tanning-16.jpg">
+<img class="fix535" src="{% include image_path.html %}/dd-tanning-17.jpg">
+<img class="fix535" src="{% include image_path.html %}/dd-tanning-18.jpg">
+<img class="fix535" src="{% include image_path.html %}/dd-tanning-19.jpg">
+<img class="fix535" src="{% include image_path.html %}/dd-tanning-20.jpg">
+<img class="fix535" src="{% include image_path.html %}/dd-tanning-21.jpg">
+<img class="fix535" src="{% include image_path.html %}/dd-tanning-22.jpg">
+<img class="fix535" src="{% include image_path.html %}/dd-tanning-23.jpg">
+<img class="fix535" src="{% include image_path.html %}/dd-tanning-24.jpg">
