--- a/_posts/2019-05-09-dorothea-tanning.html
+++ b/_posts/2019-05-09-dorothea-tanning.html
@@ -4,27 +4,27 @@ title: Dorothea Tanning
 image_path: /projects/dorothea-tanning
 footer: '<p><strong>Museo Reina Sofía  </strong>2018<br />  <strong><em>Dorothea Tanning. </em></strong>Catalogue, 208 pages, 20,5 x 26 cm'
 ---
-<img class="fix535" src="{% include image_path.html %}/dd-tanning-1.jpg">
-<img class="fix535" src="{% include image_path.html %}/dd-tanning-2.jpg">
-<img class="fix535" src="{% include image_path.html %}/dd-tanning-3.jpg">
-<img class="fix535" src="{% include image_path.html %}/dd-tanning-4.jpg">
-<img class="fix535" src="{% include image_path.html %}/dd-tanning-5.jpg">
-<img class="fix535" src="{% include image_path.html %}/dd-tanning-6.jpg">
-<img class="fix535" src="{% include image_path.html %}/dd-tanning-7.jpg">
-<img class="fix535" src="{% include image_path.html %}/dd-tanning-8.jpg">
-<img class="fix535" src="{% include image_path.html %}/dd-tanning-9.jpg">
-<img class="fix535" src="{% include image_path.html %}/dd-tanning-10.jpg">
-<img class="fix535" src="{% include image_path.html %}/dd-tanning-11.jpg">
-<img class="fix535" src="{% include image_path.html %}/dd-tanning-12.jpg">
-<img class="fix535" src="{% include image_path.html %}/dd-tanning-13.jpg">
-<img class="fix535" src="{% include image_path.html %}/dd-tanning-14.jpg">
-<img class="fix535" src="{% include image_path.html %}/dd-tanning-15.jpg">
-<img class="fix535" src="{% include image_path.html %}/dd-tanning-16.jpg">
-<img class="fix535" src="{% include image_path.html %}/dd-tanning-17.jpg">
-<img class="fix535" src="{% include image_path.html %}/dd-tanning-18.jpg">
-<img class="fix535" src="{% include image_path.html %}/dd-tanning-19.jpg">
-<img class="fix535" src="{% include image_path.html %}/dd-tanning-20.jpg">
-<img class="fix535" src="{% include image_path.html %}/dd-tanning-21.jpg">
-<img class="fix535" src="{% include image_path.html %}/dd-tanning-22.jpg">
-<img class="fix535" src="{% include image_path.html %}/dd-tanning-23.jpg">
-<img class="fix535" src="{% include image_path.html %}/dd-tanning-24.jpg">
+<img class="fix535" src="{% include image_path.html %}/d-tanning-1.jpg">
+<img class="fix535" src="{% include image_path.html %}/d-tanning-2.jpg">
+<img class="fix535" src="{% include image_path.html %}/d-tanning-3.jpg">
+<img class="fix535" src="{% include image_path.html %}/d-tanning-4.jpg">
+<img class="fix535" src="{% include image_path.html %}/d-tanning-5.jpg">
+<img class="fix535" src="{% include image_path.html %}/d-tanning-6.jpg">
+<img class="fix535" src="{% include image_path.html %}/d-tanning-7.jpg">
+<img class="fix535" src="{% include image_path.html %}/d-tanning-8.jpg">
+<img class="fix535" src="{% include image_path.html %}/d-tanning-9.jpg">
+<img class="fix535" src="{% include image_path.html %}/d-tanning-10.jpg">
+<img class="fix535" src="{% include image_path.html %}/d-tanning-11.jpg">
+<img class="fix535" src="{% include image_path.html %}/d-tanning-12.jpg">
+<img class="fix535" src="{% include image_path.html %}/d-tanning-13.jpg">
+<img class="fix535" src="{% include image_path.html %}/d-tanning-14.jpg">
+<img class="fix535" src="{% include image_path.html %}/d-tanning-15.jpg">
+<img class="fix535" src="{% include image_path.html %}/d-tanning-16.jpg">
+<img class="fix535" src="{% include image_path.html %}/d-tanning-17.jpg">
+<img class="fix535" src="{% include image_path.html %}/d-tanning-18.jpg">
+<img class="fix535" src="{% include image_path.html %}/d-tanning-19.jpg">
+<img class="fix535" src="{% include image_path.html %}/d-tanning-20.jpg">
+<img class="fix535" src="{% include image_path.html %}/d-tanning-21.jpg">
+<img class="fix535" src="{% include image_path.html %}/d-tanning-22.jpg">
+<img class="fix535" src="{% include image_path.html %}/d-tanning-23.jpg">
+<img class="fix535" src="{% include image_path.html %}/d-tanning-24.jpg">
