--- a/_posts/2019-05-09-pilar-albarracin-18.html
+++ b/_posts/2019-05-09-pilar-albarracin-18.html
@@ -5,22 +5,22 @@ image_path: /projects/pilar-albarracin-2018
 footer: '<p><strong>Tabacalera Promoción del Arte, Spanish Ministry of Culture and Sports  </strong>2018<br />  <strong><em>Pilar Albarracín. Que me quiten lo bailado  </em></strong><br />Catalogue, 136 pages 17 x 24 cm, and exhibition graphics
 '
 ---
-<img class="fix535" src="{% include image_path.html %}/pilaralbarracin.jpg">
-<img class="fix535" src="{% include image_path.html %}/pilaralbarracin2.jpg">
-<img class="fix535" src="{% include image_path.html %}/pilaralbarracin3.jpg">
-<img class="fix535" src="{% include image_path.html %}/pilaralbarracin4.jpg">
-<img class="fix535" src="{% include image_path.html %}/pilaralbarracin5.jpg">
-<img class="fix535" src="{% include image_path.html %}/pilaralbarracin6.jpg">
-<img class="fix535" src="{% include image_path.html %}/pilaralbarracin7.jpg">
-<img class="fix535" src="{% include image_path.html %}/pilaralbarracin8.jpg">
-<img class="fix535" src="{% include image_path.html %}/pilaralbarracin9.jpg">
-<img class="fix535" src="{% include image_path.html %}/pilaralbarracin10.jpg">
-<img class="fix535" src="{% include image_path.html %}/pilaralbarracin11.jpg">
-<img class="fix535" src="{% include image_path.html %}/pilaralbarracin12.jpg">
-<img class="fix535" src="{% include image_path.html %}/pilaralbarracin13.jpg">
-<img class="fix535" src="{% include image_path.html %}/pilaralbarracin14.jpg">
-<img class="fix535" src="{% include image_path.html %}/pilaralbarracin15.jpg">
-<img class="fix535" src="{% include image_path.html %}/pilaralbarracin16.jpg">
-<img class="fix535" src="{% include image_path.html %}/pilaralbarracin17.jpg">
-<img class="fix535" src="{% include image_path.html %}/pilaralbarracin18.jpg">
-<img class="fix535" src="{% include image_path.html %}/pilaralbarracin19.jpg">
+<img class="fix535" src="{% include image_path.html %}/palbarracin-1.jpg">
+<img class="fix535" src="{% include image_path.html %}/palbarracin-2.jpg">
+<img class="fix535" src="{% include image_path.html %}/palbarracin-3.jpg">
+<img class="fix535" src="{% include image_path.html %}/palbarracin-4.jpg">
+<img class="fix535" src="{% include image_path.html %}/palbarracin-5.jpg">
+<img class="fix535" src="{% include image_path.html %}/palbarracin-6.jpg">
+<img class="fix535" src="{% include image_path.html %}/palbarracin-7.jpg">
+<img class="fix535" src="{% include image_path.html %}/palbarracin-8.jpg">
+<img class="fix535" src="{% include image_path.html %}/palbarracin-9.jpg">
+<img class="fix535" src="{% include image_path.html %}/palbarracin-10.jpg">
+<img class="fix535" src="{% include image_path.html %}/palbarracin-11.jpg">
+<img class="fix535" src="{% include image_path.html %}/palbarracin-12.jpg">
+<img class="fix535" src="{% include image_path.html %}/palbarracin-13.jpg">
+<img class="fix535" src="{% include image_path.html %}/palbarracin-14.jpg">
+<img class="fix535" src="{% include image_path.html %}/palbarracin-15.jpg">
+<img class="fix535" src="{% include image_path.html %}/palbarracin-16.jpg">
+<img class="fix535" src="{% include image_path.html %}/palbarracin-17.jpg">
+<img class="fix535" src="{% include image_path.html %}/palbarracin-18.jpg">
+<img class="fix535" src="{% include image_path.html %}/palbarracin-19.jpg">
