--- a/_posts/2019-05-09-pilar-albarracin-18.html
+++ b/_posts/2019-05-09-pilar-albarracin-18.html
@@ -5,22 +5,22 @@ image_path: /projects/pilar-albarracin-2018
 footer: '<p><strong>Tabacalera Promoción del Arte, Spanish Ministry of Culture and Sports  </strong>2018<br />  <strong><em>Pilar Albarracín. Que me quiten lo bailado  </em></strong><br />Catalogue, 136 pages 17 x 24 cm, and exhibition graphics
 '
 ---
-<img class="fix535" src="{% include image_path.html %}/palbarracin-1.jpg">
-<img class="fix535" src="{% include image_path.html %}/palbarracin-2.jpg">
-<img class="fix535" src="{% include image_path.html %}/palbarracin-3.jpg">
-<img class="fix535" src="{% include image_path.html %}/palbarracin-4.jpg">
-<img class="fix535" src="{% include image_path.html %}/palbarracin-5.jpg">
-<img class="fix535" src="{% include image_path.html %}/palbarracin-6.jpg">
-<img class="fix535" src="{% include image_path.html %}/palbarracin-7.jpg">
-<img class="fix535" src="{% include image_path.html %}/palbarracin-8.jpg">
-<img class="fix535" src="{% include image_path.html %}/palbarracin-9.jpg">
-<img class="fix535" src="{% include image_path.html %}/palbarracin-10.jpg">
-<img class="fix535" src="{% include image_path.html %}/palbarracin-11.jpg">
-<img class="fix535" src="{% include image_path.html %}/palbarracin-12.jpg">
-<img class="fix535" src="{% include image_path.html %}/palbarracin-13.jpg">
-<img class="fix535" src="{% include image_path.html %}/palbarracin-14.jpg">
-<img class="fix535" src="{% include image_path.html %}/palbarracin-15.jpg">
-<img class="fix535" src="{% include image_path.html %}/palbarracin-16.jpg">
-<img class="fix535" src="{% include image_path.html %}/palbarracin-17.jpg">
-<img class="fix535" src="{% include image_path.html %}/palbarracin-18.jpg">
-<img class="fix535" src="{% include image_path.html %}/palbarracin-19.jpg">
+<img class="fix535" src="{% include image_path.html %}/pilal-1.jpg">
+<img class="fix535" src="{% include image_path.html %}/pilal-2.jpg">
+<img class="fix535" src="{% include image_path.html %}/pilal-3.jpg">
+<img class="fix535" src="{% include image_path.html %}/pilal-4.jpg">
+<img class="fix535" src="{% include image_path.html %}/pilal-5.jpg">
+<img class="fix535" src="{% include image_path.html %}/pilal-6.jpg">
+<img class="fix535" src="{% include image_path.html %}/pilal-7.jpg">
+<img class="fix535" src="{% include image_path.html %}/pilal-8.jpg">
+<img class="fix535" src="{% include image_path.html %}/pilal-9.jpg">
+<img class="fix535" src="{% include image_path.html %}/pilal-10.jpg">
+<img class="fix535" src="{% include image_path.html %}/pilal-11.jpg">
+<img class="fix535" src="{% include image_path.html %}/pilal-12.jpg">
+<img class="fix535" src="{% include image_path.html %}/pilal-13.jpg">
+<img class="fix535" src="{% include image_path.html %}/pilal-14.jpg">
+<img class="fix535" src="{% include image_path.html %}/pilal-15.jpg">
+<img class="fix535" src="{% include image_path.html %}/pilal-16.jpg">
+<img class="fix535" src="{% include image_path.html %}/pilal-17.jpg">
+<img class="fix535" src="{% include image_path.html %}/pilal-18.jpg">
+<img class="fix535" src="{% include image_path.html %}/pilal-19.jpg">
