--- a/_posts/2018-01-02-cine-por-mujeres.html
+++ b/_posts/2018-01-02-cine-por-mujeres.html
@@ -11,7 +11,7 @@ footer: '<p><strong>Limbo Producciones </strong>2018-2019<br />  <strong><em>Cin
 
 <img class="fix535 espacio30" src="{% include image_path.html %}/CartelCPM.png">
 
-<img class="fix535 espacio30" src="{% include image_path.html %}/folleto-cinepormujeres.jpg" class="fix535 espacio30">
+<img class="fix535 espacio30" src="{% include image_path.html %}/folleto-cinepormujeres-1.jpg" class="fix535 espacio30">
 
 <img class="fix535 espacio60" src="{% include image_path.html %}/LonaCBB.jpg">
 
