Actualizando escaparate, por ahora escondido en elvivero.es/35c4p4r473

--- a/35c4p4r473.html
+++ b/35c4p4r473.html
@@ -4,7 +4,7 @@ title: "El vivero"
 ---
 {% assign month = site.time | date: '%m' %}{% if month == "12" %}{% assign year = site.time | date: '%Y' | plus: 1 %}{% else %}{% assign year = site.time | date: '%Y' %}{% endif %}
 <div id="content" class="content">
-{% include escaparate.html %}
+{% include escaparate-new.html %}
 <div id="leftscroll" class="scroll" onclick='hidecontact()'></div>
 <div id="rightscroll" class="scroll" onclick='hidecontact()'></div>
 </div>
