nuevos ajustes: responsive funciona en navegadores no moviles, scroll vertical+horizontal, flechas scroll

--- a/estudio.html
+++ b/estudio.html
@@ -1,13 +1,14 @@
 ---
 layout: post
-title: Studio
+title: Estudio
 footer: '<a href="/studio">Read in English.</a></br> Calle Pez, 27. Oficina 312. 28004 Madrid<br>T +34 915 328 011 <a href="mailto:info@elvivero.es">e-mail</a><br><a href="https://www.instagram.com/elviverodesign" target="_blank" class="nohover">Instagram</a>'
 style: "img{
 	height: 535px;
 	display: inline
 }
 .text{
-		width:1065px;
+  display:flex;
+	width:1065px;
 	height: 485px;
 	padding-right: 3px;
 	margin-right: 25px;
@@ -31,7 +32,6 @@ style: "img{
 	.text{
 		font-size: 12px;
 	}
-
 }
 "
 ---
