--- a/studio.html
+++ b/studio.html
@@ -7,7 +7,8 @@ style: "img{
 	display: inline
 }
 .text{
-		width:1065px;
+	width:1065px;
+  display:flex;
 	height: 485px;
 	padding-right: 3px;
 	margin-right: 25px;
