video vimeo y scroll animado

--- a/_posts/2018-01-02-cine-por-mujeres.html
+++ b/_posts/2018-01-02-cine-por-mujeres.html
@@ -15,8 +15,7 @@ footer: '<p><strong>Limbo Producciones </strong>2018-2019<br />  <strong><em>Cin
 
 <img class="fix535 espacio30" src="{% include image_path.html %}/LonaCBB.jpg">
 
-
-<iframe src="https://player.vimeo.com/video/343707448?autoplay=1&loop=1&title=0&byline=0&portrait=0" width="322" height="535" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="espacio30"></iframe>
+<iframe src="https://player.vimeo.com/video/350693870?autoplay=1&loop=1&title=0&byline=0&portrait=0" width="322" height="535" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 
 <iframe src="https://player.vimeo.com/video/310297437?title=0&byline=0&portrait=0" width="952" height="535" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="espacio30"></iframe>
 
