--- a/_posts/2018-01-02-mncars-audiovisuales.html
+++ b/_posts/2018-01-02-mncars-audiovisuales.html
@@ -17,146 +17,146 @@ style: 'body{background-color: #a5a5a5;}
 	white-space: nowrap;
 }'
 ---
-<img src="{% include image_path.html %}/advsls-01.jpg" class="small">
+<img src="{% include image_path.html %}/advsls-01.jpg" class="small small50">
 <img src="{% include image_path.html %}/advsls-02.jpg">
 <img src="{% include image_path.html %}/advsls-03.jpg" class="espacio25">
 
-<img src="{% include image_path.html %}/advsls-04.jpg" class="small">
+<img src="{% include image_path.html %}/advsls-04.jpg" class="small small50">
 <img src="{% include image_path.html %}/advsls-05.jpg">
 <img src="{% include image_path.html %}/advsls-06.jpg" class="espacio25">
 
-<img src="{% include image_path.html %}/advsls-07.jpg" class="small">
+<img src="{% include image_path.html %}/advsls-07.jpg" class="small small50">
 <img src="{% include image_path.html %}/advsls-08.jpg">
 <img src="{% include image_path.html %}/advsls-09.jpg" class="espacio25">
 
-<img src="{% include image_path.html %}/advsls-10.jpg" class="small">
+<img src="{% include image_path.html %}/advsls-10.jpg" class="small small50">
 <img src="{% include image_path.html %}/advsls-11.jpg">
 <img src="{% include image_path.html %}/advsls-12.jpg" class="espacio25">
 
-<img src="{% include image_path.html %}/advsls-13.jpg" class="small">
+<img src="{% include image_path.html %}/advsls-13.jpg" class="small small50">
 <img src="{% include image_path.html %}/advsls-14.jpg">
 <img src="{% include image_path.html %}/advsls-15.jpg" class="espacio25">
 
-<img src="{% include image_path.html %}/advsls-16.jpg" class="small">
+<img src="{% include image_path.html %}/advsls-16.jpg" class="small small33">
 <img src="{% include image_path.html %}/advsls-17.jpg">
 <img src="{% include image_path.html %}/advsls-18.jpg" class="espacio25">
 
-<img src="{% include image_path.html %}/advsls-19.jpg" class="small">
+<img src="{% include image_path.html %}/advsls-19.jpg" class="small small50">
 <img src="{% include image_path.html %}/advsls-20.jpg">
 <img src="{% include image_path.html %}/advsls-21.jpg" class="espacio25">
 
-<img src="{% include image_path.html %}/advsls-22.jpg" class="small">
+<img src="{% include image_path.html %}/advsls-22.jpg" class="small small50">
 <img src="{% include image_path.html %}/advsls-23.jpg">
 <img src="{% include image_path.html %}/advsls-24.jpg" class="espacio25">
 
-<img src="{% include image_path.html %}/advsls-27.jpg" class="small">
+<img src="{% include image_path.html %}/advsls-27.jpg" class="small small50">
 <img src="{% include image_path.html %}/advsls-26.jpg">
 <img src="{% include image_path.html %}/advsls-25.jpg" class="espacio25">
 
-<img src="{% include image_path.html %}/advsls-28.jpg" class="small">
+<img src="{% include image_path.html %}/advsls-28.jpg" class="small small50">
 <img src="{% include image_path.html %}/advsls-29.jpg">
 <img src="{% include image_path.html %}/advsls-30.jpg" class="espacio25">
 
-<img src="{% include image_path.html %}/advsls-31.jpg" class="small">
+<img src="{% include image_path.html %}/advsls-31.jpg" class="small small50">
 <img src="{% include image_path.html %}/advsls-32.jpg">
 <img src="{% include image_path.html %}/advsls-33.jpg" class="espacio25">
 
-<img src="{% include image_path.html %}/advsls-34.jpg" class="small">
+<img src="{% include image_path.html %}/advsls-34.jpg" class="small small33">
 <img src="{% include image_path.html %}/advsls-35.jpg">
 <img src="{% include image_path.html %}/advsls-36.jpg" class="espacio25">
 
-<img src="{% include image_path.html %}/advsls-37.jpg" class="small">
+<img src="{% include image_path.html %}/advsls-37.jpg" class="small small50">
 <img src="{% include image_path.html %}/advsls-38.jpg">
 <img src="{% include image_path.html %}/advsls-39.jpg" class="espacio25">
 
-<img src="{% include image_path.html %}/advsls-40.jpg" class="small">
+<img src="{% include image_path.html %}/advsls-40.jpg" class="small small50">
 <img src="{% include image_path.html %}/advsls-41.jpg">
 <img src="{% include image_path.html %}/advsls-42.jpg" class="espacio25">
 
-<img src="{% include image_path.html %}/advsls-43.jpg" class="small">
+<img src="{% include image_path.html %}/advsls-43.jpg" class="small small50">
 <img src="{% include image_path.html %}/advsls-44.jpg">
 <img src="{% include image_path.html %}/advsls-45.jpg" class="espacio25">
 
-<img src="{% include image_path.html %}/advsls-46.jpg" class="small">
+<img src="{% include image_path.html %}/advsls-46.jpg" class="small small50">
 <img src="{% include image_path.html %}/advsls-47.jpg">
 <img src="{% include image_path.html %}/advsls-48.jpg" class="espacio25">
 
-<img src="{% include image_path.html %}/advsls-49.jpg" class="small">
+<img src="{% include image_path.html %}/advsls-49.jpg" class="small small50">
 <img src="{% include image_path.html %}/advsls-50.jpg">
 <img src="{% include image_path.html %}/advsls-51.jpg" class="espacio25">
 
-<img src="{% include image_path.html %}/advsls-52.jpg" class="small">
+<img src="{% include image_path.html %}/advsls-52.jpg" class="small small50">
 <img src="{% include image_path.html %}/advsls-53.jpg">
 <img src="{% include image_path.html %}/advsls-54.jpg" class="espacio25">
 
-<img src="{% include image_path.html %}/advsls-55.jpg" class="small">
+<img src="{% include image_path.html %}/advsls-55.jpg" class="small small50">
 <img src="{% include image_path.html %}/advsls-56.jpg">
 <img src="{% include image_path.html %}/advsls-57.jpg" class="espacio25">
 
-<img src="{% include image_path.html %}/advsls-58.jpg" class="small">
+<img src="{% include image_path.html %}/advsls-58.jpg" class="small small50">
 <img src="{% include image_path.html %}/advsls-59.jpg">
 <img src="{% include image_path.html %}/advsls-60.jpg" class="espacio25">
 
-<img src="{% include image_path.html %}/advsls-61.jpg" class="small">
+<img src="{% include image_path.html %}/advsls-61.jpg" class="small small70">
 <img src="{% include image_path.html %}/advsls-62.jpg">
 <img src="{% include image_path.html %}/advsls-63.jpg" class="espacio25">
 
-<img src="{% include image_path.html %}/advsls-64.jpg" class="small">
+<img src="{% include image_path.html %}/advsls-64.jpg" class="small small50">
 <img src="{% include image_path.html %}/advsls-65.jpg">
 <img src="{% include image_path.html %}/advsls-66.jpg" class="espacio25">
 
-<img src="{% include image_path.html %}/advsls-67.jpg" class="small">
+<img src="{% include image_path.html %}/advsls-67.jpg" class="small small50">
 <img src="{% include image_path.html %}/advsls-68.jpg">
 <img src="{% include image_path.html %}/advsls-69.jpg" class="espacio25">
 
-<img src="{% include image_path.html %}/advsls-70.jpg" class="small">
+<img src="{% include image_path.html %}/advsls-70.jpg" class="small small33">
 <img src="{% include image_path.html %}/advsls-71.jpg">
 <img src="{% include image_path.html %}/advsls-72.jpg" class="espacio25">
 
-<img src="{% include image_path.html %}/advsls-73.jpg" class="small">
+<img src="{% include image_path.html %}/advsls-73.jpg" class="small small50">
 <img src="{% include image_path.html %}/advsls-74.jpg">
 <img src="{% include image_path.html %}/advsls-75.jpg" class="espacio25">
 
-<img src="{% include image_path.html %}/advsls-76.jpg" class="small">
+<img src="{% include image_path.html %}/advsls-76.jpg" class="small small70">
 <img src="{% include image_path.html %}/advsls-77.jpg">
 <img src="{% include image_path.html %}/advsls-78.jpg" class="espacio25">
 
-<img src="{% include image_path.html %}/advsls-79.jpg" class="small">
+<img src="{% include image_path.html %}/advsls-79.jpg" class="small small50">
 <img src="{% include image_path.html %}/advsls-80.jpg">
 <img src="{% include image_path.html %}/advsls-81.jpg" class="espacio25">
 
-<img src="{% include image_path.html %}/advsls-82.jpg" class="small">
+<img src="{% include image_path.html %}/advsls-82.jpg" class="small small50">
 <img src="{% include image_path.html %}/advsls-83.jpg">
 <img src="{% include image_path.html %}/advsls-84.jpg" class="espacio25">
 
-<img src="{% include image_path.html %}/advsls-85.jpg" class="small">
+<img src="{% include image_path.html %}/advsls-85.jpg" class="small small33">
 <img src="{% include image_path.html %}/advsls-86.jpg">
 <img src="{% include image_path.html %}/advsls-87.jpg" class="espacio25">
 
-<img src="{% include image_path.html %}/advsls-88.jpg" class="small">
+<img src="{% include image_path.html %}/advsls-88.jpg" class="small small50">
 <img src="{% include image_path.html %}/advsls-89.jpg">
 <img src="{% include image_path.html %}/advsls-90.jpg" class="espacio25">
 
-<img src="{% include image_path.html %}/advsls-91.jpg" class="small">
+<img src="{% include image_path.html %}/advsls-91.jpg" class="small small50">
 <img src="{% include image_path.html %}/advsls-92.jpg">
 <img src="{% include image_path.html %}/advsls-93.jpg" class="espacio25">
 
-<img src="{% include image_path.html %}/advsls-94.jpg" class="small">
+<img src="{% include image_path.html %}/advsls-94.jpg" class="small small50">
 <img src="{% include image_path.html %}/advsls-95.jpg">
 <img src="{% include image_path.html %}/advsls-96.jpg" class="espacio25">
 
-<img src="{% include image_path.html %}/advsls-97.jpg" class="small">
+<img src="{% include image_path.html %}/advsls-97.jpg" class="small small50">
 <img src="{% include image_path.html %}/advsls-98.jpg">
 <img src="{% include image_path.html %}/advsls-99.jpg" class="espacio25">
 
-<img src="{% include image_path.html %}/advsls-100.jpg" class="small">
+<img src="{% include image_path.html %}/advsls-100.jpg" class="small small50">
 <img src="{% include image_path.html %}/advsls-101.jpg">
 <img src="{% include image_path.html %}/advsls-102.jpg" class="espacio25">
 
-<img src="{% include image_path.html %}/advsls-103.jpg" class="small">
+<img src="{% include image_path.html %}/advsls-103.jpg" class="small small50">
 <img src="{% include image_path.html %}/advsls-104.jpg">
 <img src="{% include image_path.html %}/advsls-105.jpg" class="espacio25">
 
-<img src="{% include image_path.html %}/advsls-106.jpg" class="small">
+<img src="{% include image_path.html %}/advsls-106.jpg" class="small small50">
 <img src="{% include image_path.html %}/advsls-107.jpg">
 <img src="{% include image_path.html %}/advsls-108.jpg" class="espacio25">
