--- a/studio.html
+++ b/studio.html
@@ -60,7 +60,7 @@ style: "img{
 			<p>Author of photography books <i>While Stocks Last</i> Volumes I and II.<br><a href="http://instagram.com/leandrolattes" target="_blank">Instagram</a> <a href="https://es.linkedin.com/pub/leandro-lattes/28/ab8/770" target="_blank">LinkedIn</a></p>
 			<p class="p4"><br></p>
 			<p><b>Contributors</b></p>
-			<p>Luis Castro, Ruth García de Santiago, <br> Axel Kacelnik, Brendan Mc Cormick, <br>Carolina Matos, David Sueiro.
+            <p>Axel Kacelnik, Brendan Mc Cormick,<br> David Sueiro.
 			</p>
 			<p class="p4"><br></p>
 		</div>
