ps1: imagenes en baja ocultadas (en comentarios)

--- a/_posts/2018-01-02-ps1.html
+++ b/_posts/2018-01-02-ps1.html
@@ -6,18 +6,10 @@ footer: '<strong>Ministerio de Exteriores / AECI</strong> &nbsp;2003 <br><em><st
 style: 'body{background-color: #a5a5a5;}'
 ---
 
-<img src="{% include image_path.html %}/ps-01.jpg">
+<!--<img src="{% include image_path.html %}/ps-01.jpg">-->
 <img src="{% include image_path.html %}/ps-02.jpg">
 <img src="{% include image_path.html %}/ps-03.jpg" class="espacio25">
-
 <img src="{% include image_path.html %}/ps-04.jpg" class="espacio25">
-
-
-
 <img src="{% include image_path.html %}/ps-06.png" class="espacio25">
-
-<img src="{% include image_path.html %}/ps-05.png" class="espacio25">
-
-
-
+<!--<img src="{% include image_path.html %}/ps-05.png" class="espacio25">-->
 <img src="{% include image_path.html %}/ps-bodegon.png">
